tests/samples/positive/generics/method_local_identity_closure_m3_1.ax
module method_local_identity_closure_m3_1;

struct PairBox[T] {
    left: T;
    tag: i32;
}

impl[T] PairBox[T] {
    fn owner(self: &PairBox[T]) -> T where T: Copy {
        return self.left;
    }

    fn echo[U](self: &PairBox[T], value: U) -> U {
        return value;
    }
}

fn main() -> i32 {
    let int_box: PairBox[i32] = PairBox[i32] { left: 10, tag: 1 };
    let bool_box: PairBox[bool] = PairBox[bool] { left: true, tag: 2 };

    let owner_int: i32 = int_box.owner();
    let owner_bool: bool = bool_box.owner();
    let int_from_int_owner: i32 = int_box.echo[i32](5);
    let int_from_bool_owner: i32 = bool_box.echo[i32](6);
    let bool_from_int_owner: bool = int_box.echo[bool](true);
    let bool_from_bool_owner: bool = bool_box.echo[bool](true);

    if owner_bool && bool_from_int_owner && bool_from_bool_owner {
        return owner_int + int_from_int_owner + int_from_bool_owner - 21;
    }
    return 1;
}
